<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".team.detail.PlayerDetailActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorBg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="405dp">

            <LinearLayout
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_pp"
                    android:layout_marginTop="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@color/colorWhite" />

                <TextView
                    android:id="@+id/tv_pp_name"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_name"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="@dimen/f20" />

                <TextView
                    android:id="@+id/tv_pp_position"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_position"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/f20" />
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_marginStart="50dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="@dimen/pad15"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="300dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_kg"
                            android:textSize="@dimen/f16" />

                        <TextView
                            android:id="@+id/tv_pp_weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/weight_num"
                            android:textStyle="bold"
                            android:textSize="@dimen/f20"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimaryDark" />
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height"
                            android:textSize="@dimen/f16" />

                        <TextView
                            android:id="@+id/tv_pp_height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/height_num"
                            android:textStyle="bold"
                            android:textSize="@dimen/f20"
                            android:paddingTop="10dp"
                            android:textColor="@color/colorPrimaryDark" />

                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_pp_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/lorem_ipsum"/>
    </LinearLayout>

</ScrollView>