<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".match.detail.DetailMatchActivity"
    android:background="@color/colorBg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/pad5"
            android:padding="@dimen/pad10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_match_date_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_match"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/f16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/pad2"
                android:layout_marginEnd="@dimen/pad2"
                android:text="-"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/f16" />

            <TextView
                android:id="@+id/tv_match_time_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/match_time"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/f16" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/tv_score_home_detail"
                android:gravity="center"
                android:orientation="vertical">

                <!--<ProgressBar-->
                    <!--android:id="@+id/pb_load_home"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:visibility="visible"/>-->

                <ImageView
                    android:id="@+id/iv_home_detail"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <TextView
                    android:id="@+id/tv_home_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pad5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/team_home"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/f16"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_score_home_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@+id/tv_vs"
                android:textColor="@color/colorAccent"
                android:text="@string/score_home"
                android:textSize="@dimen/f30"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_vs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/colorAccent"
                android:text="@string/vs"
                android:textSize="@dimen/f20"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_score_away_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/tv_vs"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="@string/score_away"
                android:textSize="@dimen/f30"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_score_away_detail"
                android:gravity="center"
                android:orientation="vertical">

                <!--<ProgressBar-->
                    <!--android:id="@+id/pb_load_away"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:visibility="visible"/>-->

                <ImageView
                    android:id="@+id/iv_away_detail"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <TextView
                    android:id="@+id/tv_away_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pad5"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/team_away"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/f16"
                    android:textStyle="bold" />
            </LinearLayout>


        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pad5"
            app:cardElevation="0dp"
            app:cardCornerRadius="@dimen/pad5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/pad15">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad10">

                    <TextView
                        android:id="@+id/tv_home_goal_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/goal_text" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/soccer_ball_retina" />

                    <TextView
                        android:id="@+id/tv_away_goal_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textAlignment="textEnd"
                        android:text="@string/goal_text"/>
                </LinearLayout>

                <View
                    android:layout_margin="@dimen/pad10"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/team_stats"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/f14"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad2">

                    <TextView
                        android:id="@+id/tv_home_shots"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/shots"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:id="@+id/tv_away_shots"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad2">

                    <TextView
                        android:id="@+id/tv_home_yc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/yellow_cards"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:id="@+id/tv_away_yc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad2">

                    <TextView
                        android:id="@+id/tv_home_rc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/red_cards"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:id="@+id/tv_away_rc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>
                </LinearLayout>

                <View
                    android:layout_margin="@dimen/pad10"
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad5">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/lineups"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/f14"
                        android:textStyle="bold" />
                </LinearLayout>

                <!--LINEUPS-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad2">

                    <TextView
                        android:id="@+id/tv_home_gk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/goal_keeper"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:id="@+id/tv_away_gk"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad2">

                    <TextView
                        android:id="@+id/tv_home_dfd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/defense"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:id="@+id/tv_away_dfd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad2">

                    <TextView
                        android:id="@+id/tv_home_mdf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/midfield"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:id="@+id/tv_away_mdf"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/pad2">

                    <TextView
                        android:id="@+id/tv_home_fw"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/forward"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>

                    <TextView
                        android:id="@+id/tv_away_fw"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="@dimen/f12"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>